--- a/index.html
+++ b/index.html
@@ -3522,7 +3522,7 @@ Timestamp:         <span id="novakTimestamp">[local time]</span>
 <p>Watch a directory in real time (requires watchdog) pip install watchdog python -m monitor.novak_monitor watch /etc --chain receipts.jsonl</p><br>
 
   </ul>
-  <a href="monitor/README.md" target="_blank">View Code & Docs →</a>
+  <a href="monitor/readme.md" target="_blank">View Code & Docs →</a>
 </div>
 
 
