--- a/index.html
+++ b/index.html
@@ -1433,6 +1433,132 @@ function download12LayerPdf() {
 </script>
 
 <!-- =============================================== -->
+<!-- ✅ COLLAPSIBLE SECURITY LAYERS CARD -->
+<!-- =============================================== -->
+
+<div class="card" style="margin-top:28px; padding:20px;">
+
+  <details>
+    <summary style="cursor:pointer; font-size:18px; font-weight:600;">
+      🔐 What Do All These NOVAK Security Layers Mean?
+    </summary>
+
+    <div style="padding:4px 0 0 0; margin-top:12px;">
+
+      <p style="margin-bottom:18px; font-size:16px; line-height:1.6;">
+        NOVAK certificates include multiple cryptographic and forensic layers.
+        Each one provides a different type of tamper-evidence, authenticity,
+        or mathematical integrity.  
+        Here’s what each term means — in clear, simple language:
+      </p>
+
+      <!-- ================================================= -->
+      <!-- 1. Guilloche -->
+      <!-- ================================================= -->
+      <details class="sub-collapse">
+        <summary>🌀 Derived Guilloché</summary>
+        <div class="sub-card">
+          <p>
+            A highly precise mathematical curve pattern — similar to those used on
+            passports and banknotes — but uniquely generated from your file’s HVET hash.
+            If a single bit changes, the entire pattern collapses and regenerates differently.
+          </p>
+        </div>
+      </details>
+
+      <br>
+
+      <!-- ================================================= -->
+      <!-- 2. Fractal Substrate -->
+      <!-- ================================================= -->
+      <details class="sub-collapse">
+        <summary>🌿 Fractal Substrate</summary>
+        <div class="sub-card">
+          <p>
+            A cryptographically-seeded branching fractal drawn beneath all layers.
+            It detects cloning, cropping, reprinting, or counterfeit attempts by revealing
+            subtle disruptions in its structure.
+          </p>
+        </div>
+      </details>
+
+      <br>
+
+      <!-- ================================================= -->
+      <!-- 3. Holographic Dispersion -->
+      <!-- ================================================= -->
+      <details class="sub-collapse">
+        <summary>🌈 Holographic Dispersion Band</summary>
+        <div class="sub-card">
+          <p>
+            A spectral color band that shifts from blue → cyan → magenta.
+            It behaves like digital holography and highlights tampering when zoomed or reprinted.
+          </p>
+        </div>
+      </details>
+
+      <br>
+
+      <!-- ================================================= -->
+      <!-- 4. Microtext -->
+      <!-- ================================================= -->
+      <details class="sub-collapse">
+        <summary>🔍 Microtext Halo (L0–L15 • PL-X • PS-X)</summary>
+        <div class="sub-card">
+          <p>
+            A circular ring of microscopic text containing all NOVAK Laws and Industry Addenda.
+            It is nearly invisible unless zoomed and cannot be cleanly reproduced by counterfeiting tools.
+          </p>
+        </div>
+      </details>
+
+      <br>
+
+      <!-- ================================================= -->
+      <!-- 5. Triquetra -->
+      <!-- ================================================= -->
+      <details class="sub-collapse">
+        <summary>🔷 Triquetra Security Weave</summary>
+        <div class="sub-card">
+          <p>
+            A three-arc interlocking mathematical structure used in high-security printing.
+            NOVAK distorts it using HVET frequencies, creating a shape that cannot be faked
+            without the original hash.
+          </p>
+        </div>
+      </details>
+
+      <br>
+
+      <!-- ================================================= -->
+      <!-- 6. Registry Anchors -->
+      <!-- ================================================= -->
+      <details class="sub-collapse">
+        <summary>🔗 Registry Anchors (SHA-512 / BLAKE3)</summary>
+        <div class="sub-card">
+          <p>
+            A root cryptographic anchor embedded in the footer which allows any recipient
+            to verify the certificate independently against the NOVAK Registry — even years later.
+          </p>
+        </div>
+      </details>
+
+      <br>
+
+      <!-- ================================================= -->
+      <!-- Bottom collapse button -->
+      <!-- ================================================= -->
+      <button class="collapse-bottom-btn" onclick="collapseDetails(this)">
+        ▲ Collapse
+      </button>
+
+    </div>
+  </details>
+
+</div>
+
+
+<!-- =============================================== -->
 <!-- ✅ COLLAPSIBLE TEST EXAMPLE — PREMIUM EDITION -->
 <!-- =============================================== -->
 
